<?xml version="1.0"?>
<package format="3">
  <name>brics_actuator</name>
  <version>0.7.0</version>
  <description>Message defined in the BRICS project</description>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <author>Alexander Bubeck</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/brics_actuator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
